# PotatoWidgets

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  setup.py  style.css  style.scss  topbar.py  topbar2.py  {
PotatoWidgets/: Bash.py  Env.py  Imports.py  Methods.py  PotatoCLI.py  PotatoLoop.py  Style.py  Variable.py  Widget.py  _Logger.py  __Import.py  __init__.py  __version__.py
PotatoWidgets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
PotatoWidgets/Bash/: __init__.py
PotatoWidgets/Cli/: __init__.py  __main__.py  old__main__.py  potatocli
PotatoWidgets/Env/: Env.py  __init__.py
PotatoWidgets/Extras/: Applications.py  __init__.py
PotatoWidgets/Methods/: Methods.py  __init__.py
PotatoWidgets/PotatoLoop/: PotatoLoop.py  __init__.py
PotatoWidgets/Services/: Applications.py  Battery.py  Hyprland.py  Notification.py  Service.py  Style.py  __init__.py
PotatoWidgets/Style/: Style.py  __init__.py
PotatoWidgets/Variable/: Listener.py  Poll.py  Variable.py  _Listener.py  _Poll.py  _Variable.py  __init__.py
PotatoWidgets/Variables/: _Listener.py  _Poll.py  _Variable.py
PotatoWidgets/Widget/: Box.py  Button.py  CenterBox.py  CheckBox.py  ComboBox.py  Entry.py  EventBox.py  Fixed.py  FlowBox.py  Grid.py  Icon.py  Image.py  Label.py  Menu.py  Overlay.py  ProgressBar.py  Revealer.py  Scale.py  Scroll.py  Separator.py  Stack.py  ToggleButton.py  Window.py  _Box.py  _Button.py  _CenterBox.py  (+14 more)
default_conf/: __init__.py  __main__.py
examples/: topbar.py  topbar2.py
src/: Service.py  Variable.py  Widget.py  __Import.py
(+55 files in other folders)
