[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "PotatoWidgets"
version = "1.2.8"
author = "T0kyoB0y"
description = "Widget system written in Python, using GTK+ and the GtkLayerShell."
long-description = """
Widget system written in Python, using GTK+ and the GtkLayerShell.
"""
url = "https://github.com/T0kyoB0y/PotatoWidgets"
license = "GNU General Public License v3 (GPLv3)"
keywords = "GTK+ GtkLayerShell widget python"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[options]
packages = find:
install_requires = ["PyGObject"]

[options.entry_points]
console_scripts =
    potatocli = PotatoWidgets.Cli.__main__:main

[options.package_data]
PotatoWidgets = ["README.md"]

