
[tool.poetry]
name = "PotatoWidgets"
version = "1.2.8"
description = "Widget system written in Python, using GTK+ and the GtkLayerShell."
authors = ["T0kyoB0y"]

[tool.poetry.dependencies]
python = "^3.6"
pygobject = "^3.40"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
